--- a/src/app/components/search-box/search-box.module.css
+++ b/src/app/components/search-box/search-box.module.css
@@ -2,9 +2,12 @@
   padding: var(--largeSpace);
   display: flex;
   justify-content: center;
+  align-items: center;
   position: sticky;
-  z-index: 2;
   top:0;
+  overflow-y: auto;
+  max-height: 160px;
+  z-index: 2;
   background: linear-gradient(to bottom, var(--background) 77%, transparent 100%);
 }
 
@@ -32,6 +35,12 @@
   box-shadow: 0px 0px #fff;
   &:focus{
     box-shadow: var(--centerShadow); 
+  }
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-results-button,
+  &::-webkit-search-results-decoration {
+    display: none;
   }
 }
 
