--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@ h6 {
   --xSmallSpace: 0.3rem;
   --smallSpace: 0.5rem;
   --mediumSpace: 1rem;
+  --normalSpace: 1.5rem;
   --largeSpace: 3rem;
 
 
